# Halide

./: CMakeLists.txt  README_webassembly.md
apps/HelloPyTorch/: modules.py  setup.py  test.py
apps/depthwise_separable_conv/: tf_separable_conv.py
apps/onnx/: halide_as_onnx_backend.py
apps/resnet_50/: load_weights.py
cmake/: FindNodeJS.cmake  FindV8.cmake
dependencies/: CMakeLists.txt
dependencies/llvm/: CMakeLists.txt
dependencies/wasm/: CMakeLists.txt
packaging/: CMakeLists.txt
python_bindings/: CMakeLists.txt
python_bindings/apps/: local_laplacian_app.py
python_bindings/src/halide/: CMakeLists.txt  _generator_helpers.py  imageio.py
python_bindings/test/correctness/: basics.py  buffer.py  extern.py  float_precision_test.py  multi_method_module_test.py  pystub.py
python_bindings/test/generators/: complexpy_generator.py
python_bindings/tutorial/: CMakeLists.txt  lesson_05_scheduling_1.py  lesson_07_multi_stage_pipelines.py  lesson_11_cross_compilation.py  lesson_12_using_the_gpu.py  lesson_13_tuples.py  lesson_14_types.py
src/: CMakeLists.txt  WasmExecutor.cpp
tutorial/: CMakeLists.txt
